# hacks25

./: .env.example  .env.orcaslicer  .gitignore  .pre-commit-config.yaml  ARCH.Printer.md  ARCH.md  ARCH_BACKEND.md  ARCH_FRONTEND.md  CLAUDE.md  DEVELOPMENT.md  DOCKER.md  INITAL.md  INITIAL.md  LICENSE  Makefile  PR_SUMMARY.md  README.md  TASK.md  TASK1_SUMMARY_REFACTORED.md  TASK1_TEST_RESULTS.md  TASK2_SUMMARY.md  docker-compose.yml  print_cow_now.py  test_printer_connection.py
backend/: .dockerignore  .env.example  .flake8  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  test_storage.py
backend/alembic/: env.py
backend/resources/cura_definitions/: bambu_h2d.def.json
backend/resources/orca_configs/: README.md
backend/resources/tencent_cloud/: style_presets_mapping.json
backend/scripts/: init_db.py
backend/src/: main.py
backend/src/application/services/: print_service.py  style_service.py
backend/src/domain/: __init__.py
backend/src/domain/enums/: __init__.py  print_enums.py  source_type.py  status.py
backend/src/domain/interfaces/: __init__.py  i_model_converter.py  i_model_generator.py  i_print_task_repository.py  i_printer_adapter.py  i_printer_repository.py  i_queue_manager.py  i_repository.py  i_slicer.py  i_storage.py  i_style_engine.py
backend/src/domain/models/: __init__.py  model3d.py  print_task.py  printer.py  style.py
backend/src/domain/value_objects/: __init__.py  connection_config.py  (+5 more)
backend/tests/: README.md  conftest.py
backend/tests/integration/: test_bambu_adapter.py  test_cura_slicer.py
(+146 files in other folders)
